ALignment fixed

--- a/src/pages/main/monitoring/dme/details/style.css
+++ b/src/pages/main/monitoring/dme/details/style.css
@@ -1,31 +1,28 @@
 
-table.details {
+.details-header {
+    margin-bottom: 20px;
+}
+.details-main table.details {
     font-size:12px;
-    border-spacing: 1.2em 0em;
+    border-spacing: 1.5em 0em;
 }
 
-table.details tbody {
-    display: block;
+.details-main table.details tbody {
     max-height: calc(27vh - 10px);
     overflow-y: auto;
     overflow-x: hidden;
 }
 
-table.details tbody td,
-table.details thead th {
-    width: 200px;
+.details-main table.details tbody td,
+.details-main table.details thead th {
+    max-width: 200px;
 }
 
-table.details thead th {
+.details-main table.details thead th {
     border-bottom: 1px solid white;
 }
 
-table.details thead th:last-child {
-    width: 216px; /* 140px + 16px detailsbar width */
-}
-
-thead, tbody tr {
-    display: table;
+.details-main thead, tbody tr {
     width: 100%;
     text-align: left;
 }
